# easyqtrs

./: .gitignore  LICENSE  QADate_trade.py  README.md  aash.sh  ast.sh  codelist_utils.py  day-calc.sh  eday-calc.sh  gan-test.ipynb  gitkey.txt  hstop.sh  mongo-get-test.ipynb  mongo.conf  mydata2.py  mydata3.py  readTdx.py  readme.txt  setup.py  start-test.sh  start.sh  stop.sh  tdx_hcalc-test.ipynb  tdx_hcalc_day_select.py  tdx_hcalc_eday_select.py  tdx_hcalc_forcheck.py  tdx_hcalc_new0.py  tdx_hcalc_new1.py  tdx_hcalc_new1_all.py  tdx_hcalc_new1_all_polars.py  tdx_hcalc_new1_min.py  tdx_hcalc_new1_polars.py  tdx_hcalc_new1_polars2.py  tdx_hcalc_pool.py  test-all.py  test-data.py  test-pf.py  test-pf2.py  testfilter.py  未命名.ipynb
config/: bk_list.json  chklist.json-bak  chklist.json2  codelist.xlsx  cyb_list.json  index2_list.json  index_list.json  sh_list.json  stock3_list.json  stock_calc_list.json  stock_list.json  sz_list.json  top_list.json  toptop_list.json  toptop_list.json-zt  toptop_list2.json  worker2_list.json  worker_list.json  zxb_list.json
custom/: fixedmainengine.py  qqdataengine.py  sinadataengine.py
easyquant/: __init__.py  main_engine.py
gpzs_tools/: StockOrderApi.py  buy_order.py  easymq.py  gpzs_order_pb2.py  pip.ini  sell_order.py  setting.py  test_pub_order.py
strategies/: Strategy_data.py  Strategy_data_2top.py  Strategy_data_calc_01.py  Strategy_data_disp.py  Strategy_data_index.py  Strategy_data_index_disp.py  Strategy_top.py  (+5 more)
test/rust/: Cargo.toml
test/rust/examples/: .README.md.swp  pubsub_receive_stock.rs
test/rust/src/: main.rs
(+195 files in other folders)
